test/rewriter/errors/pat_unsupported_payload.expected
File "pat_unsupported_payload.ml", line 2, characters 14-19:
2 |   | [%yojson? Ok ()] -> false
                  ^^^^^
Error: ppx_yojson: unsupported payload
